2005-11-02  Aaron Bockover  <aaron@aaronbock.net>

	* data/images/encode-action-24.png:
	* data/images/Makefile.am:
	* src/Makefile.am: Add icon for encoder progress action
	* src/PlayerInterface.cs: Fix minor bug concerning meta key detection (Ulas)

2005-11-01  Aaron Bockover  <aaron@aaronbock.net>

	* src/NotificationAreaIcon.cs: Add mouse scroll event support (Ulas SAHIN);
	tab->space formatting
	* src/PlayerInterface.cs: Adjust volume when SHIFT+Scroll on notification
	area icon (NAI) (Ulas SAHIN), Next/Previous track on normal scroll on NAI,
	seek in current song when CTRL+Scroll on NAI; more tab->space formatting

2005-11-01  Aaron Bockover  <aaron@aaronbock.net>

	* banshee.mdp:
	* banshee.mds:
	* mediaengines/gst/gst-mediaengine.mdp:
	* mediaengines/helix/helix-mediaengine.mdp:
	* plugincore/plugincore.mdp:
	* plugincore/plugincore.mds: Committed Ulas SAHIN's patch to update the
	MonoDevelop project files

2005-10-31  Aaron Bockover  <aaron@aaronbock.net>

	* data/banshee.schemas.in: Added schema for ShowNotificationAreaIcon key
	* src/PlayerInterface.cs: Only install notification area icon if 
	ShowNotificationAreaIcon gconf key is true
	* src/GConfKeys.cs: Added key for ShowNotificationAreaIcon
	* src/RipTransaction.cs: Removed +1 because MusicBrainz is 1-based and
	not 0-based in reporting the track index
	* HACKING: Updated it with revised style guidelines
	* entagged-sharp/: Updated entagged-sharp snapshot

2005-10-31  Miguel de Icaza  <miguel@novell.com>

	* src/LibraryTrackInfo.cs: Null or empty strings will default to
	the filename guessed values.

2005-10-31  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: Added nb to ALL_LINGUAS 

2005-10-28  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: Version 0.9.9, require ipod-sharp 0.5.9, mono 1.1.9.2,
	GStreamer 0.8.11, libnautilus-burn 2.12
	* data/glade/trackinfo.glade: Switch order of Save/Cancel buttons
	* data/glade/player.glade: Add text labels to rip/burn icons